feat: add persistent storage for Parent Folder Path

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "description": "",
   "devDependencies": {
     "electron": "^33.2.1"
+  },
+  "dependencies": {
+    "electron-store": "^10.0.0"
   }
 }
