--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "package": "electron-packager . blank-remover --platform=win32,darwin --arch=x64 --out=release-build --overwrite"
   },
   "keywords": [],
   "author": "Yana Burdakova",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "electron": "^33.2.1"
+    "electron": "^33.2.1",
+    "electron-packager": "^17.1.2"
   },
   "dependencies": {
     "electron-store": "^10.0.0"
