--- a/package.json
+++ b/package.json
@@ -4,19 +4,28 @@
   "type": "module",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "cross-env NODE_ENV=development electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "package": "electron-packager . blank-remover --platform=win32,darwin --arch=x64 --out=release-build --overwrite"
+    "package": "cross-env NODE_ENV=production electron-packager . blank-remover --platform=win32,darwin --arch=x64 --out=release-build --overwrite"
   },
   "keywords": [],
   "author": "Yana Burdakova",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "electron": "^33.2.1",
     "electron-packager": "^17.1.2"
   },
   "dependencies": {
     "electron-store": "^10.0.0"
-  }
+  },
+  "files": [
+    "main.js",
+    "preload.js",
+    "index.html",
+    "styles.css",
+    "remove_blank_pages.py",
+    "node_modules/**/*"
+  ]
 }
